# fastapi_lab

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTOMATION_SUMMARY.md  Dockerfile  README.md  SETUP.md  Taskfile.yml  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: AUTOMATION_MODELS.md  CONTRIBUTING.md  DESIGN.md  SQLMODEL_MIGRATION.md  TESTING_GUIDE.md  openapi.json
scripts/: automation_examples.py  console.py  export_openapi.py  init-db.sh  init_tables.py  reset-db.sh  setup_automation.sh  test_automation.sh
src/api/v1/: api_logs.py  examples.py  items.py  router.py  tasks.py  webhooks.py  workflows.py
src/core/: auth.py  config.py  exception_handlers.py  logging.py
src/db/: __init__.py  base.py
src/middleware/: correlation.py  request_logging.py
src/models/: __init__.py  api_log.py  task.py  webhook.py  workflow.py
src/schemas/: __init__.py
tasks/: __init__.py  openapi.py  routes.py
tests/: conftest.py  test_advanced.py  test_main.py
